# tdetoys

./: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  tdetoys.lsm
amor/: AmorIface.h  CMakeLists.txt  Makefile.am  amor.cpp  amor.desktop  amor.h  amoranim.cpp  amoranim.h  amorbubble.cpp  amorbubble.h  amorconfig.cpp  amorconfig.h  amordialog.cpp  amordialog.h  amorpm.cpp  amorpm.h  amortips.cpp  amortips.h  amorwidget.cpp  amorwidget.h  main.cpp
amor/data/: CMakeLists.txt  tips-en
amor/data/pics/: CMakeLists.txt
amor/data/pics/animated/: CMakeLists.txt
amor/data/pics/animated/blob/: CMakeLists.txt
amor/data/pics/animated/bonhomme/: CMakeLists.txt
amor/data/pics/animated/eyes/: CMakeLists.txt
amor/data/pics/animated/ghost/: CMakeLists.txt
amor/data/pics/animated/neko/: CMakeLists.txt
amor/data/pics/animated/pingu/: CMakeLists.txt
amor/data/pics/animated/tao/: CMakeLists.txt
amor/data/pics/animated/worm/: CMakeLists.txt
amor/data/pics/preview/: CMakeLists.txt
amor/data/pics/static/: CMakeLists.txt
doc/amor/: CMakeLists.txt  index.docbook  man-amor.6.docbook
doc/kmoon/: CMakeLists.txt  index.docbook
doc/kodo/: CMakeLists.txt  index.docbook
doc/kteatime/: CMakeLists.txt  index.docbook
doc/kweather/: CMakeLists.txt  index.docbook
doc/kworldclock/: CMakeLists.txt  index.docbook  man-kworldclock.1.docbook
eyesapplet/: CMakeLists.txt  Makefile.am  eyes.cpp  eyes.h  eyesapplet.desktop
fifteenapplet/: CMakeLists.txt  Makefile.am  fifteenapplet.cpp  fifteenapplet.h  kfifteenapplet.desktop  qttableview.cpp  qttableview.h
kmoon/: CMakeLists.txt  Makefile.am  kmoonapplet.cpp  kmoonapplet.desktop  kmoonapplet.h  kmoondlg.cpp  kmoondlg.h  kmoonwidget.cpp  kmoonwidget.h  phases.cpp
kmoon/pics/: CMakeLists.txt
kodo/: CMakeLists.txt  Makefile.am  kimagenumber.cpp  kimagenumber.h  kodo.desktop  kodometer.cpp  kodometer.h  main.cpp
kteatime/: CMakeLists.txt  ChangeLog  Makefile.am  TODO  eventsrc  kteatime.desktop  main.cpp  tealist.cpp  tealist.h  timeedit.cpp  timeedit.h  toplevel.cpp  toplevel.h
ktux/: CMakeLists.txt  Makefile.am  ktux.desktop  sprite.cpp  sprite.h  spriteanim.cpp  spriteanim.h  spritemisc.cpp  spritemisc.h  spritepm.cpp  spritepm.h
ktux/sprites/: CMakeLists.txt
kweather/: CMakeLists.txt  Makefile.am  dockwidget.cpp  dockwidget.h  kcmweather.cpp  kcmweather.desktop  kcmweather.h  kcmweatherservice.cpp  kcmweatherservice.desktop  kcmweatherservice.h  kweather.cpp  kweather.desktop  kweather.h  kweatherreport.desktop  kweatherservice.desktop  main.cpp  metar_parser.cpp  metar_parser.h  metar_parser_test.cpp  prefdialogdata.ui  reportmain.cpp  reportview.cpp  reportview.h  serviceconfigdata.ui  serviceconfigwidget.cpp  serviceconfigwidget.h  sidebarwidget.cpp  sidebarwidget.h  sidebarwidgetbase.ui  stationdatabase.cpp  stationdatabase.h  stationdatabase_test.cpp  sun.cpp  sun.h  sun_test.cpp  weatherIface.h  weather_stations.desktop  weatherbar.cpp  weatherbar.desktop  weatherbar.h  (+7 more)
kweather/graphics/: CMakeLists.txt
kworldwatch/: CMakeLists.txt  Makefile.am  about.ui  applet.cpp  applet.h  astro.c  astro.h  cities.cpp  cities.h  clock.ui  flags.cpp  flags.h  flow.cpp  flow.h  kdeworld.desktop  kworldclock.desktop  kwwapplet.desktop  main.cpp  main.h  maploader.cpp  maploader.h  mapwidget.cpp  mapwidget.h  zoneclock.cpp  zoneclock.h
kworldwatch/maps/: CMakeLists.txt
kworldwatch/maps/depths/: CMakeLists.txt
kworldwatch/maps/flatworld/: CMakeLists.txt
kworldwatch/pics/: CMakeLists.txt
