#################################################
#
#  (C) 2012 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES moon1.png moon10.png moon11.png
  moon12.png moon13.png moon14.png moon15.png
  moon16.png moon17.png moon18.png moon19.png
  moon2.png moon20.png moon21.png moon22.png
  moon23.png moon24.png moon25.png moon26.png
  moon27.png moon28.png moon29.png moon3.png
  moon4.png moon5.png moon6.png moon7.png
  moon8.png moon9.png
  DESTINATION ${DATA_INSTALL_DIR}/kmoon/pics
)

