#################################################
#
#  (C) 2012 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES anim0001.png anim0002.png
  anim0003.png anim0004.png anim0005.png
  anim0006.png anim0007.png anim0008.png
  anim0009.png anim0010.png bg.png flare0001.png
  flare0002.png spriterc star0001.png
  star0002.png
  DESTINATION ${DATA_INSTALL_DIR}/ktux/sprites
)

