#################################################
#
#  (C) 2012 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES flag.png flag-mask.xpm
  flag-red.png flag-blue.png flag-green.png
  DESTINATION
    ${DATA_INSTALL_DIR}/kworldclock/pics
)

