#################################################
#
#  (C) 2012 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES depths.desktop 400.jpg 800.jpg
  DESTINATION
    ${DATA_INSTALL_DIR}/kworldclock/maps/depths
)

