#################################################
#
#  (C) 2012 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES flatworld.desktop 200.jpg 400.jpg
  800.jpg 1200.jpg 1600.jpg
  DESTINATION
    ${DATA_INSTALL_DIR}/kworldclock/maps/flatworld
)

